--- a/demo/navigating_cspace.ipynb
+++ b/demo/navigating_cspace.ipynb
@@ -154,7 +154,19 @@
    "id": "75487459-bd92-4ddf-99fb-cbd8f8aca4c7",
    "metadata": {},
    "source": [
-    "what is RA-ILD?  \"rheumatoid arthritis\" combined with \"Interstitial lung disease\". "
+    "what is RA-ILD?  \n",
+    "\n",
+    "\"rheumatoid arthritis\" combined with \"Interstitial lung disease\". "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "579ef868-9033-46ff-a9e1-bd2154503698",
+   "metadata": {},
+   "source": [
+    "## explore concepts midway between 'RA' and 'ILD'\n",
+    "\n",
+    "both on small model (coarse-grained exploration)"
    ]
   },
   {
@@ -185,6 +197,14 @@
    ],
    "source": [
     "smodel.similar_by_vector( smodel.get_vector('rheumatoid_arthritis', norm=True)*1/2.0 + smodel.get_vector('interstitial_lung_disease', norm=True)*1/2.0 , topn=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b8afce-321f-462e-b79f-46387047b49a",
+   "metadata": {},
+   "source": [
+    "and on full model for fine-grained exploration"
    ]
   },
   {
@@ -376,7 +396,7 @@
     "- gene 1283 is named *CTD*, like the *Connective Tissue Diseases*\n",
     "- gene 260431 is named *COPD*, like the *Chronic Obstructive Pulmonary Disease*.\n",
     "\n",
-    "Those are Pubtator3 ambiguities, incorporated in CSpace."
+    "Those are Pubtator3 ambiguities, incorporated in CSpace, that will hopefully be solved in future Pubtator3 releases."
    ]
   },
   {
