--- a/demo/navigating_cspace.ipynb
+++ b/demo/navigating_cspace.ipynb
@@ -5,7 +5,9 @@
    "id": "5069c846-54f5-445c-95d3-17406722d7b6",
    "metadata": {},
    "source": [
-    "# Dependencies"
+    "# Measuring the relatedness between biomedical concepts\n",
+    "\n",
+    "In this notebook we use CSpace to explore concepts of interests, their inter-relationships and other, potentially unknown, related concepts."
    ]
   },
   {
@@ -35,7 +37,7 @@
    "id": "c30bfd94-1e0f-4307-b754-b6d643df48fe",
    "metadata": {},
    "source": [
-    "# Loading\n",
+    "# Loading the model\n",
     "Loading with 'r' parameters means another process can do the same and the memory is shared through MMAP"
    ]
   },
@@ -425,6 +427,7 @@
     }
    ],
    "source": [
+    "# compute shared concepts between IPF and PAH.\n",
     "# gene PAH is the top most, non-erroneous related gene to IPF\n",
     "list(shared_similarities(smodel,c1,'gene_5053',topn=1000))"
    ]
