--- a/demo/navigating_cspace.ipynb
+++ b/demo/navigating_cspace.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "## explore concepts midway between 'RA' and 'ILD'\n",
     "\n",
-    "both on small model (coarse-grained exploration)"
+    "both on small model (**coarse-grained** exploration)"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "id": "21b8afce-321f-462e-b79f-46387047b49a",
    "metadata": {},
    "source": [
-    "and on full model for fine-grained exploration"
+    "and on full model for **fine-grained** exploration"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "id": "16d017e1-cd0b-4253-bf70-b586d5fa467e",
    "metadata": {},
    "source": [
-    "the same can be done for long-covid"
+    "the same can be done for **long-covid**"
    ]
   },
   {
@@ -287,7 +287,7 @@
    "id": "21637020-3074-419a-8b8a-50b99cb6e492",
    "metadata": {},
    "source": [
-    "ME/CFS is Myalgic Encephalomyelitis / Chronic Fatigue Syndrome, shares a lot of symphtoms with Long-Covid!"
+    "**ME/CFS** is **Myalgic Encephalomyelitis / Chronic Fatigue Syndrome**, shares a lot of symphtoms with **Long-Covid**!"
    ]
   },
   {
@@ -386,7 +386,10 @@
    "id": "44202f33-545f-4be1-9719-7ece7a60114b",
    "metadata": {},
    "source": [
-    "discover commonalities between IPF-associated genes and Long-Covid"
+    "We found that the top-most gene is **gene_5053** (**PAH**) .\n",
+    "\n",
+    "**PAH** is [closely associated to IPF](https://www.ncbi.nlm.nih.gov/research/pubtator3/docsum?text=@GENE_PAH%20AND%20@DISEASE_Idiopathic_Pulmonary_Fibrosis), something previously unknown.\n",
+    "\n"
    ]
   },
   {
