--- a/demo/cspace_ontology_distributions.ipynb
+++ b/demo/cspace_ontology_distributions.ipynb
@@ -805,6 +805,16 @@
     "ys = np.array([math.log1p(r[\"count\"]) for r in high_literature if r[\"count\"] is not None], float)\n",
     "print(\"Pearson on log1p(count):\", float(np.corrcoef(xs, ys)[0,1]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a746c3b7-c000-4298-9ce2-a716c3e4a63b",
+   "metadata": {},
+   "source": [
+    "CSpace embeddings **positively correlates with number of concept co-occurrence in literature**, \n",
+    "\n",
+    "another interesting fact supporting it's ability to effectively **summarize** and **capture the essence** of the relations between concepts described in literature."
+   ]
   }
  ],
  "metadata": {
